--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StickMeMore</title>
   </head>
-  <body>
+  <body class="font-roboto">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
